fix: reduce flickering of pictures

--- a/src/scss/_profile.scss
+++ b/src/scss/_profile.scss
@@ -4,10 +4,6 @@
   font-size: 14px;
 }
 
-.profile-about-p {
-  font-size: 14px;
-}
-
 .follow-name-font {
   font-size: 14px;
 }
